Day-74-Policy-As-Code/3-rogue-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rogue-developer-app
  namespace: default
spec:
  containers:
  - name: web
    image: nginx:latest
