Day-74-Policy-As-Code/4-compliant-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: senior-engineer-app
  namespace: default
spec:
  containers:
  - name: web
    image: nginx:1.25.4
