Day-74-Policy-As-Code/1-template-block-latest.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblocklatesttag
spec:
  crd:
    spec:
      names:
        kind: K8sBlockLatestTag
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblocklatesttag
        
        # Rule 1: Block explicit ':latest' tags
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          endswith(container.image, ":latest")
          msg := sprintf("ENTERPRISE POLICY VIOLATION: The ':latest' tag is strictly forbidden. Image detected: %v", [container.image])
        }
        
        # Rule 2: Block implicit tags (no colon means it defaults to latest)
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not contains(container.image, ":")
          msg := sprintf("ENTERPRISE POLICY VIOLATION: No image version specified (defaults to latest). Image detected: %v", [container.image])
        }
